--- a/app/src/main/res/layout/activity_currently_testing.xml
+++ b/app/src/main/res/layout/activity_currently_testing.xml
@@ -5,7 +5,7 @@
     android:id="@+id/listActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.yun.myapplication.Activities.ListActivity">
+    tools:context=".Activities.ListActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
