--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:background="@android:color/white"
     android:layout_height="match_parent"
-    tools:context="com.example.yun.myapplication.Activities.ListActivity">
+    tools:context=".Activities.ListActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
