--- a/app/src/main/res/layout/medic_list_item.xml
+++ b/app/src/main/res/layout/medic_list_item.xml
@@ -23,7 +23,7 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="188dp"
+            android:layout_width="215dp"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_marginStart="10dp"
@@ -40,19 +40,21 @@
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="165dp"
+            android:layout_width="212dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="19dp"
             android:layout_marginEnd="9dp"
             android:layout_toStartOf="@+id/imageView"
+            android:layout_toEndOf="@+id/image_favorite"
             android:text="Line 2"
             android:textAlignment="textEnd"
             android:textSize="15sp" />
 
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="165dp"
+            android:layout_width="213dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView"
             android:layout_marginTop="41dp"
